fix: white space no wrap (#609)

--- a/src/theme/Capsule/styles.module.css
+++ b/src/theme/Capsule/styles.module.css
@@ -39,6 +39,7 @@
   font-size: 14px;
   padding-left: 4px;
   padding-top: 1px;
+  white-space: nowrap;
 }
 
 .divider {
